--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
 
-    <title>Bucket List</title>
+    <title>To Do List</title>
 
     <style>
         * {
